# FIRMWARE-UPDATE-QUBE-ESP32

./: .devdbrc  .gitignore  AGENTS.md  CERTIFICADO_FINAL_MARCO_CIENTIFICO.md  CHANGELOG.md  CHECKLIST_VERIFICACION_FINAL.md  INDICE_DOCUMENTOS_VALIDACION.md  Investigacion.md  LICENSE  MATRIZ_REFERENCIAS_VERIFICABLES.md  Makefile  README.md  RESUMEN_VALIDACION_EJECUTIVO.md  VALIDACION_MARCO_CIENTIFICO.md  pyproject.toml
.github/agents/: analista-investigacion.agent.md  analista-pid-qube.agent.md  changelog-manager.agent.md
.github/instructions/: firmware-changelog.instructions.md
.github/prompts/: build_pdf.ps1  exportar-bibliografia.prompt.md
DOCUMENTACION_VALIDACION/: GUIA_RAPIDA.md  INDEX.md  MAPA_VISUAL.md  README.md  TARJETA_REFERENCIA_RAPIDA.md
Data/: qube_2026-05-07T00_32_35.csv  qube_2026-05-07T00_38_29.csv  qube_2026-05-13T23_32_49.csv
data/: README.md
docs/: MODELO_FISICO_SISTEMA_QUBE.md  architecture.md  new_repo_structure.md
docs/research/: INVESTIGACION.md  PENDULO_ENCODER.md  README.md  RESUMEN_HALLAZGOS.md  (+1 more)
experiments/: README.md  qube_2026-05-29T18_33_19.csv
firmware/: platformio.ini
gui/: INDEX.HTML  app.py  esp32_client.py  requirements.txt
mcp/: esp32_qube_server.py
old resources/: INVESTIGACION INICIAL.md  INVESTIGACION_ARQUITECTURA_MODERNIZACION_QUBE.md  INVESTIGACION_DETALLADA_MODERNIZACION_QUBE_2026.md  INVESTIGACION_INTEGRACION_ENCODER_PENDULO.md  RESUMEN_HALLAZGOS.md  SIGNAL_STABILIZATION_INVESTIGATION.md
tests/: conftest.py  test_buffer.py  test_client.py  test_integration.py  test_metrics.py  test_plotter.py
(+27 files in other folders)
