[project]
name = "firmware-update-qube-esp32"
version = "0.1.0"
description = "Plataforma QUBE Servo Modernizada con ESP32 — firmware, GUI y análisis experimental"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib>=3.8.0",
    "requests>=2.28.0",
    "mcp[cli]>=1.27.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.14",
    "pytest>=8.0.0",
    "pyright>=1.1.380",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
viz = [
    "matplotlib>=3.8.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import order)
    "N",   # pep8-naming
    "UP",  # pyupgrade (modernize Python)
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = [
    "ARG001",   # allow unused arguments in tests (fixtures)
    "S101",     # allow assert in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=8.0.0",
    "pyright>=1.1.380",
    "pyserial>=3.5",
]
